<resources>
    <string name="app_name">Final App assesment</string>
    <string name="start">Start</string>
    <string name="textview">TextView</string>
    <string name="password">Password</string>
    <string name="of">of</string>
    <string name="geen_account_klik_hier">geen_account_klik</string>
    <string name="inloggen">Inloggen</string>
    <string name="username">Username</string>
    <string name="email_adress">Emailadress</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="herhaal_wachtwoord">Herhaal wachtwoord</string>
    <string name="Maak_Mijn_Account">Maak mijn account</string>
    <string name="ok">OK</string>
    <string name="achievements">Achievements</string>
    <string name="Post">Post</string>
    <string name="search_players_and_teams">search players and teams</string>
</resources>
