<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etRegisterEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/wachtwoord"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegisterEmail"
        app:layout_constraintWidth_percent="0.9"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etRegisterRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/herhaal_wachtwoord"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword"
        app:layout_constraintWidth_percent="0.9"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnAccountMaken"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="12sp"
        android:text="@string/Maak_Mijn_Account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterRepeatPassword"
        app:layout_constraintWidth_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>